updated UI and lang support

--- a/src/locales/am.json
+++ b/src/locales/am.json
@@ -30,7 +30,9 @@
     "readMore": "ተጨማሪ አንብብ",
     "learnMore": "ተጨማሪ ይማሩ",
     "joinUs": "እኛን ይቀላቀሉ",
-    "explore": "ያስሱ"
+    "explore": "ያስሱ",
+    "refresh": "አድስ",
+    "viewAll": "ሁሉንም እይ"
   },
   "nav": {
     "home": "መነሻ",
@@ -45,7 +47,7 @@
     "events": "ዝግጅቶች",
     "news": "ዜናዎች",
     "gallery": "ጋለሪ",
-    "itikafProgram": "ኢትከፍ ፕሮግራም",
+    "itikafProgram": "ኢእቲ ፕሮግራም",
     "dersProgram": "ደርስ ፕሮግራም",
     "donate": "ለመለገስ"
   },
@@ -101,7 +103,9 @@
     "home": "መነሻ",
     "prayerTimes": "የስግደት ሰዓቶች",
     "events": "ዝግጅቶች",
-    "contact": "ያግኙን"
+    "contact": "ያግኙን",
+    "quickLinks": "ፈጣን አገናኞች",
+    "placeOfWorship": "ለሙስሊሞች የመጸለያ፣ የትምህርት እና የማህበረሰብ ቦታ"
   },
   "prayer": {
     "fajr": "ፋጅር",
@@ -127,11 +131,48 @@
     "upcomingEvents": "የሚመጡ ዝግጅቶች",
     "pastEvents": "ያለፉ ዝግጅቶች",
     "noEvents": "ምንም ዝግጅት አልተገኘም",
+    "noEventsDescription": "ዝግጅቶችን ለማግኘት የፍለጋ ወይም የማጣሪያ መስፈርቶችዎን ለመስተካከል ይሞክሩ።",
+    "clearAllFilters": "ሁሉንም ማጣሪያዎች አጽዳ",
     "registerNow": "አሁኑኑ ተመዝግብ",
     "viewDetails": "ዝርዝሮችን እይ",
     "eventDate": "የዝግጅቱ ቀን",
     "eventTime": "የዝግጅቱ ሰዓት",
-    "location": "አካባቢ"
+    "location": "አካባቢ",
+    "communityEvents": "የማህበረሰብ ዝግጅቶች",
+    "joinUsDescription": "በሙጀሜያ አት-ቴክዋ ለመንፈሳዊ፣ ለትምህርታዊ እና ለማህበረሰብ ግንባታ ዝግጅቶች ይቀላቀሉን።",
+    "searchEvents": "ዝግጅቶችን ፈልግ...",
+    "allCategories": "ሁሉም ምድቦች",
+    "showPastEvents": "ያለፉ ዝግጅቶችን አሳይ",
+    "gridView": "ግሪድ እይታ",
+    "listView": "ዝርዝር እይታ",
+    "calendarView": "የቀን መቁጠሪያ እይታ",
+    "viewCalendar": "ቀን መቁጠሪያ እይ",
+    "retry": "እንደገና ሞክር",
+    "haveEventIdea": "የዝግጅት ሀሳብ አለዎት?",
+    "eventIdeaDescription": "ማህበረሰባችንን ለመለገስ አዳዲስ መንገዶችን እየፈለግን ነን። የዝግጅት ሀሳቦችዎን ያጋሩን!",
+    "suggestEvent": "ዝግጅት ይመክሩ",
+    "featured": "ተመረጠ",
+    "eventFull": "ዝግጅቱ ሙሉ ነው",
+    "spotsLeft": "{{count}} ቦታዎች ቀርተዋል",
+    "noRegistrationRequired": "ምዝገባ አያስፈልግም",
+    "rsvpNow": "አሁኑኑ ይመልሱ",
+    "learnMore": "ተጨማሪ ይማሩ",
+    "dateTBD": "ቀን አልተወሰነም",
+    "spotsRemaining": "{{count}} ቦታዎች ቀርተዋል",
+    "prev": "ቀድሞ",
+    "next": "ቀጣይ",
+    "clickDayToView": "ዝግጅቶችን ለማየት ቀን ይጫኑ",
+    "eventsOn": "ዝግጅቶች በ",
+    "more": "ተጨማሪ",
+    "weekdays": {
+      "sun": "እሑድ",
+      "mon": "ሰኞ",
+      "tue": "ማክሰኞ",
+      "wed": "ረቡዕ",
+      "thu": "ሐሙስ",
+      "fri": "ዓርብ",
+      "sat": "ቅዳሜ"
+    }
   },
   "donations": {
     "title": "ለመለገስ",
@@ -145,7 +186,71 @@
     "viewAll": "ሁሉንም እይ",
     "totalRaised": "አጠቃላይ የተሰበሰበ",
     "donation": "ምጽዋት",
-    "donations": "ምጽዋቶች"
+    "donations": "ምጽዋቶች",
+    "powerOfSadaqah": "የሰዳቃ ኃይል",
+    "sadaqahDescription": "ምጽዋት (ሰዳቃ) ብቻ ምጽዋት አይደለም፤ የእምነት ማስረጃ እና ገንዘብን እና ነፍስን ለማጽዳት መንገድ ነው። እያንዳንዱ አስተዋጽዖ፣ ምንም ቢጠቃለል ቢሆን፣ በአላህ ፊት አስፈላጊ ተጽዕኖ ያሳድራል።",
+    "purifiesWealth": "ገንዘብን ያጽዳል እና አቅርቦትን ይጨምራል",
+    "extinguishesSins": "ኃጢአቶችን እንደ ውሃ እሳትን እንደሚጠፋ ያጠፋል",
+    "providesShade": "በፍርድ ቀን ጥላ ይሰጣል",
+    "supportsNeedy": "ድሃዎችን ይደግፋል እና ማህበረሰብን ያጠናክራል",
+    "quranicVerseTranslation": "\"የእነዚያ ገንዘቦቻቸውን በአላህ መንገድ የሚወጡት ምሳሌ እንደ አንድ ዘር ነው፣ ሰባት ገቦችን ያበቅላል፤ በእያንዳንዱ ገብ ውስጥ መቶ ዘሮች አሉ።\"",
+    "quranicReference": "— ሱራ አል-ባቃራ [2:261]",
+    "whyContribute": "ለምን እንደገና እንደገና?",
+    "whyContributeDesc": "ለብርሃን፣ ለአስተዳደር እና ምጽዋቶችዎ በማህበረሰባችን ላይ ከፍተኛ አዎንታዊ ተጽዕኖ እንዲኖራቸው እንገዛለን።",
+    "hundredPercentSecure": "100% ደህንነቱ የተጠበቀ",
+    "hundredPercentSecureDesc": "ክፍያዎችዎ በባንክ ደረጃ ምስጢር ማመስጠር ይከናወናሉ።",
+    "transparent": "ብርሃን",
+    "transparentDesc": "ገንዘቦች ለማህበረሰቡ እንዴት እንደሚውሉ ስለ መደበኛ ሪፖርቶች እናቀርባለን።",
+    "zakatEligible": "ዘካት የሚገባ",
+    "zakatEligibleDesc": "ዘካት፣ ሰዳቃ እና አጠቃላይ ምጽዋቶችን በትክክል ለመቆጣጠር የተነደፈ።",
+    "localImpact": "የአካባቢ ተጽዕኖ",
+    "localImpactDesc": "ለአካባቢያችን መስጊድ ፕሮግራሞችን እና ጠብታን በቀጥታ ይደግፋል።",
+    "howDonationsHelp": "ምጽዋቶችዎ እንዴት ይረዳሉ",
+    "educationSupport": "ትምህርት",
+    "educationSupportDesc": "የእስላም ጥናቶችን፣ ቁርአን ማስታወስ ፕሮግራሞችን እና ለሁሉም ዕድሜዎች የትምህርት መርጃዎችን ማገዝ።",
+    "communitySupport": "ማህበረሰብ",
+    "communitySupportDesc": "ማህበረሰብ ስብሰቦችን፣ ኢፍታር ምግቦችን እና ማህበራዊ ደጋፊ ፕሮግራሞችን ለመደገፍ የማህበረሰባችንን ግንኙነት ለማጠናከር።",
+    "maintenanceSupport": "ጠብታ",
+    "maintenanceSupportDesc": "ቅዱስ ቦታችን ለዕለታዊ ስግደቶች እና ለመገዛት ንፁህ፣ ደህንነቱ የተጠበቀ እና በትክክል የተጠበቀ እንዲሆን ማረጋገጥ።",
+    "chooseYourCause": "ምክንያትዎን ይምረጡ",
+    "noActiveCauses": "ምንም ንቁ ምክንያቶች የሉም",
+    "noActiveCausesDesc": "በአሁኑ ጊዜ ምንም የተወሰኑ የምጽዋት ምክንያቶች አይገኙም።",
+    "generalDonationAvailable": "ከዚህ በታች አጠቃላይ ምጽዋት ማድረግ ይችላሉ።",
+    "goToDonationForm": "ወደ ምጽዋት ቅጹ ይሂዱ",
+    "makeDonation": "ምጽዋት ያድርጉ",
+    "supportCommunitySubtitle": "ማህበረሰባችንን በለጋስ አስተዋጽዖዎ ድገፉ",
+    "enterCustomAmount": "ብጁ መጠን ያስገቡ",
+    "donationSummary": "የምጽዋት ማጠቃለያ",
+    "cause": "ምክንያት",
+    "generalFund": "አጠቃላይ ፈንድ",
+    "whatYouSupporting": "የሚደግፉት:",
+    "communityPrograms": "የማህበረሰብ ፕሮግራሞች",
+    "educationalServices": "የትምህርት አገልግሎቶች",
+    "facilityMaintenance": "የመሳሪያ ጠብታ",
+    "worshipActivities": "የመገዛት እንቅስቃሴዎች",
+    "taxReceipt": "የግብር ሪሲት",
+    "taxReceiptDesc": "ለሁሉም ምጽዋቶች የግብር ሪሲቶች በኢሜይል ይሰጣሉ።",
+    "securePaymentChapa": "ደህንነቱ የተጠበቀ ክፍያ በቻፓ የተሰራ",
+    "loadingCauses": "ምክንያቶች በመጫን ላይ...",
+    "raised": "ተሰብስቧል",
+    "goal": "ዓላማ",
+    "redirectingToPayment": "ወደ ክፍያ መግቢያ በመመለስ ላይ...",
+    "donationRecordedPaymentFailed": "ምጽዋት ተመዝግቧል ነገር ግን የክፍያ ማስጀመር አልተሳካም። እባክዎ ድጋፍ ያግኙ።",
+    "thankYouDonation": "ለ{{amount}} ETB ምጽዋትዎ እናመሰግናለን!",
+    "paymentFailed": "ክፍያ አልተሳካም። እባክዎ እንደገና ይሞክሩ።",
+    "validationError": "የማረጋገጫ ስህተት",
+    "failedToLoadCauses": "የምጽዋት ምክንያቶችን ማጭን አልተቻለም",
+    "selectAmount": "መጠን ይምረጡ (ETB)",
+    "customAmount": "ብጁ መጠን",
+    "donationAmount": "የምጽዋት መጠን",
+    "pleaseEnterAmount": "እባክዎ ትክክለኛ የምጽዋት መጠን ያስገቡ",
+    "pleaseSelectCategory": "እባክዎ የምጽዋት ምድብ ይምረጡ",
+    "pleaseFillContact": "እባክዎ የመገናኘት መረጃዎን ይሙሉ",
+    "processing": "በማስተካከል ላይ...",
+    "donate": "ለመለገስ",
+    "fullName": "ሙሉ ስም",
+    "emailAddress": "የኢሜይል አድራሻ",
+    "phoneNumber": "የስልክ ቁጥር (አማራጭ)"
   },
   "education": {
     "title": "ትምህርት",
@@ -182,7 +287,32 @@
     "noServicesFound": "ምንም አገልግሎቶች አልተገኙም",
     "noServicesAvailable": "በአሁኑ ጊዜ ምንም የትምህርት አገልግሎቶች አይገኙም።",
     "tryAdjustingFilters": "ተጨማሪ አገልግሎቶችን ለማየት ማጣሪያዎችዎን ለመስተካከል ይሞክሩ።",
-    "instructor": "አስተማሪ"
+    "instructor": "አስተማሪ",
+    "filterServices": "አገልግሎቶችን ማጣሪያ",
+    "serviceType": "የአገልግሎት አይነት",
+    "level": "ደረጃ",
+    "ageGroup": "የዕድሜ ቡድን",
+    "allLevels": "ሁሉም ደረጃዎች",
+    "beginner": "ጀማሪ",
+    "intermediate": "መካከለኛ",
+    "advanced": "የላቀ",
+    "children": "ልጆች (6-12)",
+    "teens": "ወጣቶች (13-17)",
+    "adults": "አዋቂዎች (18+)",
+    "seniors": "አሮጌዎች (60+)",
+    "browseCourses": "ኮርሶችን ያስሱ",
+    "pleaseLogin": "እባክዎ በአገልግሎቶች ለመመዝገብ ይግቡ",
+    "sharedSuccessfully": "በተሳካ ሁኔታ ተጋርቷል",
+    "failedToShare": "ማጋራት አልተሳካም",
+    "shareService": "አገልግሎት አጋራ",
+    "linkCopied": "አገናኝ ወደ የመገልገያ ሰሌዳ ተቀድቷል",
+    "dailyQirat": "ዕለታዊ ቂራት ፕሮግራም",
+    "communityQuran": "የማህበረሰብ ቁርአን ንባብ",
+    "fridayKhutba": "የሰኞ ኸውትባ",
+    "quranRecitation": "ቁርአን ንባብ (ቂራት)",
+    "quranMemorizationHifz": "ቁርአን ማስታወስ (ሂፍዝ)",
+    "tajweed": "ታጅዊድ",
+    "hadithStudies": "የሀዲስ ጥናት"
   },
   "futsal": {
     "title": "ፉትሳል ማስያዝ",
@@ -215,7 +345,18 @@
     "viewTodaySlots": "የዛሬን ስሎቶች እይ",
     "loadingSlots": "ስሎቶች በመጫን ላይ...",
     "gridView": "ግሪድ እይታ",
-    "calendarView": "የቀን መቁጠሪያ እይታ"
+    "calendarView": "የቀን መቁጠሪያ እይታ",
+    "bookYourSlotTitle": "የእርስዎን ስሎት ይዘዙ",
+    "selectDate": "ቀን ይምረጡ",
+    "available": "ይገኛል",
+    "booked": "ተዘውቷል",
+    "timeSlot": "የጊዜ ስሎት",
+    "unavailable": "አይገኝም",
+    "noSlotsAvailable": "ምንም ስሎቶች አይገኙም",
+    "price": "ዋጋ",
+    "etb": "ብር",
+    "maxPlayers": "ከፍተኛ {{count}} ተጫዋቾች",
+    "mainCourt": "ዋናው አዳራሽ"
   },
   "itikaf": {
     "title": "ኢትከፍ ፕሮግራም",
@@ -229,7 +370,77 @@
     "experienceSpiritual": "መንፈሳዊ",
     "itikafRetreat": "ኢትከፍ ምሽግ",
     "ramadanItikafSubtitle": "በረመዳን የመጨረሻ 10 ቀናት ውስጥ የእኛን ኢትከፍ ፕሮግራም ይቀላቀሉ። ነፍስዎን ያጥሩ እና በመስጊድ በረከት ያለው አካባቢ ውስጥ ሌይላት አል-ቃድርን ይፈልጉ።",
-    "registerForItikaf": "ለኢትከፍ ተመዝግብ"
+    "registerForItikaf": "ለኢትከፍ ተመዝግብ",
+    "findProgram": "ፕሮግራም ያግኙ",
+    "aboutItikaf": "ስለ ኢትከፍ",
+    "programsRegistration": "ፕሮግራሞች እና ምዝገባ",
+    "whatIsItikaf": "ኢትከፍ ምንድን ነው?",
+    "itikafDescription": "ኢትከፍ ለተወሰነ ጊዜ በመስጊድ ውስጥ ራስን ማገልገል እና አላህን ብቻ ማመልከት ነው። የዓለም ሕይወትዎን ለመቆም፣ ከማታለል ራስን ለመለየት እና ሙሉ በሙሉ በስግደት፣ በቁርአን እና በማሰላሰል ላይ ለመተኮስ የሚደረግ ጊዜ ነው።",
+    "sunnahOfProphet": "የነቢዩ (ሰ.ዓ.ወ) ሱና",
+    "spiritualPurification": "መንፈሳዊ ማጽዳት",
+    "seekingLaylatAlQadr": "ሌይላት አል-ቃድርን መፈለግ",
+    "strengtheningConnection": "አላህን ጋር ያለውን ግንኙነት ማጠናከር",
+    "loadingPrograms": "ኢትከፍ ፕሮግራሞች በመጫን ላይ...",
+    "myRegistrations": "የእኔ ምዝገባዎች",
+    "availablePrograms": "የሚገኙ ፕሮግራሞች",
+    "noUpcomingPrograms": "ምንም የሚመጡ ፕሮግራሞች የሉም",
+    "freeRegistration": "ነጻ ምዝገባ",
+    "registered": "ተመዝግቧል",
+    "registrationFee": "የምዝገባ ክፍያ",
+    "alreadyRegistered": "አስቀድሞ ተመዝግቧል",
+    "registrationClosed": "ምዝገባ ዝግቷል",
+    "completeRegistration": "ምዝገባ ያጠናቅቁ",
+    "pleaseLoginToRegister": "ለኢትከፍ ለመመዝገብ እባክዎ ይግቡ",
+    "emergencyContact": "የአደጋ ጊዜ የመገናኘት ስም",
+    "emergencyPhone": "የአደጋ ጊዜ የመገናኘት ስልክ",
+    "specialRequirements": "ልዩ መስፈርቶች",
+    "notes": "ማስታወሻዎች",
+    "whenToPerform": "ኢትከፍ መቼ ይከናወናል",
+    "timingAndDuration": "ጊዜ እና ቆይታ",
+    "ramadanSunnah": "ረመዳን (ሱና)",
+    "ramadanSunnahDesc": "የረመዳን የመጨረሻ 10 ቀናት በጣም የተጠበቀ ሱና ነው፣ የኃይል ሌሊትን መፈለግ።",
+    "voluntaryNatafil": "የፈቃድ (ናፊል)",
+    "voluntaryNatafilDesc": "በዓመቱ ማንኛውም ጊዜ ለማንኛውም ቆይታ ሊከናወን ይችላል፣ እንዲያውም ጥቂት ሰዓታት።",
+    "duration": "ቆይታ",
+    "durationDesc": "መደበኛ ሱና 10 ቀናት ነው፣ ነገር ግን ዝቅተኛው ቆይታ እስከ የአላህ አላማ ቅጽበት ድረስ ሊሆን ይችላል።",
+    "whyWithUs": "ለምን ከእኛ ጋር ኢትከፍ?",
+    "whyWithUsDesc": "አካላዊ ፍላጎቶችዎን የሚያሳልፍ የተዋቀረ አካባቢ እናቀርባለን ስለዚህ ሙሉ በሙሉ በመንፈሳዊ ፍላጎቶችዎ ላይ ማተኮስ ይችላሉ።",
+    "scholarlyGuidance": "የትምህርት መሪነት",
+    "scholarlyGuidanceDesc": "ለጥያቄዎች እና ለመንፈሳዊ ምክር ለመሪዎች መዳረሻ።",
+    "structuredProgram": "የተዋቀረ ፕሮግራም",
+    "structuredProgramDesc": "ዕለታዊ ሀላቃዎች፣ ቁርአን ክበቦች እና ቂያም ስግደቶች።",
+    "mealsProvided": "ምግብ ይሰጣል",
+    "mealsProvidedDesc": "ዕለታዊ ሱሁር እና ኢፍታር ምግቦች ይሰጣሉ።",
+    "comfortSafety": "አስተማማኝነት እና ደህንነት",
+    "comfortSafetyDesc": "ደህንነቱ የተጠበቀ የእንቅራት ቦታዎች እና ንፁህ መሳሪያዎች።",
+    "quranicVerseTranslation": "\"እናንተም በመስጊዶች ውስጥ ተጠምቀው በምትኖሩበት ጊዜ አትገናኙዋቸውም።\"",
+    "quranicReference": "— ሱራ አል-ባቃራ [2:187]",
+    "viewDetails": "ዝርዝሮችን እይ",
+    "alreadyRegisteredToast": "አስቀድሞ ተመዝግቧል",
+    "details": "ዝርዝሮች",
+    "capacity": "መጠን",
+    "people": "ሰዎች",
+    "requirements": "መስፈርቶች",
+    "whatToBring": "ምን ማምጣት እንዳለብዎ",
+    "day": "ቀን",
+    "pleaseCheckBack": "እባክዎ ለዝማኔዎች ቆይተው ይመለሱ።",
+    "programTitleFallback": "ኢትከፍ ፕሮግራም",
+    "mainPrayerHall": "ዋናው የስግደት አዳራሽ",
+    "full": "ሙሉ",
+    "joinUsRetreat": "ለዚህ መንፈሳዊ ምሽግ ይቀላቀሉን...",
+    "phonePlaceholder": "+251...",
+    "fajrActivity": "ፋጅር:",
+    "dhuhrActivity": "ዱህር:",
+    "asrActivity": "አስር:",
+    "maghribActivity": "ማግሪብ:",
+    "ishaActivity": "ኢሻ:",
+    "dateTBD": "ቀን አልተወሰነም",
+    "invalidDate": "ልክ ያልሆነ ቀን",
+    "failedToLoadPrograms": "ኢትከፍ ፕሮግራሞችን ማጭን አልተቻለም",
+    "failedToLoadDetails": "የፕሮግራም ዝርዝሮችን ማጭን አልተቻለም",
+    "failedToRegister": "ምዝገባ አልተሳካም",
+    "successfullyRegistered": "ለኢትከፍ ፕሮግራም በተሳካ ሁኔታ ተመዝግቧል!",
+    "close": "ዝጋ"
   },
   "auth": {
     "login": "ግባ",
@@ -238,7 +449,6 @@
     "email": "ኢሜይል",
     "password": "የይለፍ ቃል",
     "confirmPassword": "የይለፍ ቃል ያረጋግጡ",
-    "forgotPassword": "የይለፍ ቃልዎን ረሳችሁ?",
     "rememberMe": "አስታውሰኝ",
     "dontHaveAccount": "መለያ የሎትም?",
     "alreadyHaveAccount": "አስቀድሞ መለያ አለዎት?",
@@ -294,7 +504,8 @@
       "bookFacilities": "መሳሪያዎችን እና ዝግጅቶችን በቀላሉ ይዘዙ",
       "connectCommunity": "ከማህበረሰቡ ጋር ይገናኙ"
     },
-    "forgotPassword": {
+    "forgotPassword": "የይለፍ ቃልዎን ረሳችሁ?",
+    "forgotPasswordPage": {
       "title": "የይለፍ ቃል ረሳችሁ?",
       "enterEmail": "የይለፍ ቃል ዳግም ማስጀመሪያ አገናኝ ለማግኘት ኢሜይልዎን ያስገቡ",
       "checkEmail": "የዳግም ማስጀመሪያ መመሪያዎችን ለማግኘት ኢሜይልዎን ይፈትሹ",
@@ -393,12 +604,51 @@
   },
   "gallery": {
     "title": "ጋለሪ",
-    "viewAll": "ሁሉንም ፎቶዎች እይ"
+    "viewAll": "ሁሉንም ፎቶዎች እይ",
+    "allMedia": "ሁሉም ሚዲያ",
+    "mosque": "መስጊድ",
+    "searchGallery": "ጋለሪ ፈልግ...",
+    "noMediaFound": "ምንም ሚዲያ አልተገኘም",
+    "filter": "ማጣሪያ",
+    "mediaGallery": "ሚዲያ ጋለሪ",
+    "exploreDescription": "ከዝግጅቶቻችን፣ ከስግደቶቻችን እና ከማህበረሰብ እንቅስቃሴዎቻችን ፎቶዎች እና ቪዲዮዎችን ያስሱ።",
+    "eventImagesWillAppear": "የዝግጅት ምስሎች አንዴ ሲጭኑ እዚህ ይታያሉ።",
+    "tryAdjustingSearch": "የፍለጋ ወይም የማጣሪያ መስፈርቶችዎን ለመስተካከል ይሞክሩ",
+    "mosqueCollegePhotos": "መስጊድ እና ኮሌጅ ፎቶዎች",
+    "curatedCollection": "ከመሳሪያዎቻችን እና ከካምፐሳችን የተመረጠ ስብስብ።",
+    "shareYourMoments": "የእርስዎን ቅጽበቶች ያጋሩ",
+    "shareDescription": "ከዝግጅቶቻችን ፎቶዎች ወይስ ቪዲዮዎች አሉዎት? በጋለሪያችን ውስጥ ለመገለጽ ያጋሩን!",
+    "submitMedia": "ሚዲያ ያስገቡ",
+    "retry": "እንደገና ሞክር",
+    "photo": "ፎቶ",
+    "video": "ቪዲዮ",
+    "untitled": "ያለ ርዕስ",
+    "mainHall": "ዋናው አዳራሽ",
+    "communityLogo": "የማህበረሰብ ሎጎ",
+    "unableToLoadGallery": "የጋለሪ ምስሎችን ማጭን አልተቻለም። እባክዎ ቆይተው እንደገና ይሞክሩ።",
+    "close": "ዝጋ"
   },
   "news": {
     "title": "ዜናዎች",
     "latestNews": "የቅርብ ጊዜ ዜናዎች",
-    "readMore": "ተጨማሪ አንብብ"
+    "readMore": "ተጨማሪ አንብብ",
+    "searchNews": "ዜናዎችን ፈልግ...",
+    "filter": "ማጣሪያ",
+    "featured": "ተመረጠ",
+    "allNews": "ሁሉም ዜናዎች",
+    "newest": "አዲስ",
+    "oldest": "አሮጌ",
+    "trending": "ታዋቂ",
+    "noNewsFound": "ምንም ዜና አልተገኘም",
+    "clearFilters": "ሁሉንም ማጣሪያዎች አጽዳ",
+    "sortBy": "በ... ደርድር",
+    "showingAnnouncements": "{{count}} ከ {{total}} ማስታወሻዎች እያሳየ ነው",
+    "activeFilters": "ንቁ ማጣሪያዎች:",
+    "search": "ፈልግ",
+    "loadingNews": "ዜናዎች በመጫን ላይ...",
+    "supportFundraising": "የገንዘብ ማሰብሰብ ድጋፍ",
+    "today": "ዛሬ",
+    "admin": "አስተዳዳሪ"
   },
   "home": {
     "quickActions": "ፈጣን ድርጊቶች",
@@ -623,6 +873,12 @@
     "nextPrayer": "ቀጣይ ስግደት",
     "timeUntil": "እስከ",
     "qiblaDirection": "የቅብላ አቅጣጫ",
+    "qiblaCompass": "ቅብላ ኮምፓስ",
+    "qiblaFromNorth": "ቅብላ",
+    "fromNorth": "ከሰሜን",
+    "enableCompass": "ኮምፓስ ይክፈቱ",
+    "enableCompassDescription": "የቀጥታ ኮምፓስ ለመጠቀም የመሣሪያ አቅጣጫ ይክፈቱ",
+    "compassActive": "ኮምፓስ ንቁ",
     "compass": "ኮምፓስ",
     "location": "አካባቢ",
     "detecting": "በመወሰን ላይ",
@@ -632,7 +888,30 @@
     "today": "ዛሬ",
     "thisWeek": "ይህ ሳምንት",
     "thisMonth": "ይህ ወር",
-    "selectDate": "ቀን ይምረጡ"
+    "selectDate": "ቀን ይምረጡ",
+    "todaysPrayerTimes": "የዛሬ የስግደት ሰዓቶች",
+    "currentLocation": "የአሁኑ አካባቢ",
+    "defaultLocation": "ነባሪ አካባቢ",
+    "downloadMonthlySchedule": "ወራዊ መርሐግብር አውርድ",
+    "sharePrayerTimes": "የስግደት ሰዓቶች ያጋሩ",
+    "refreshLocation": "አካባቢ ዳግም ያድሱ",
+    "locationInformation": "የአካባቢ መረጃ",
+    "nowTimeIs": "አሁን ሰዓቱ",
+    "nextPrayerIs": "ቀጣይ ስግደት",
+    "endTime": "የመጨረሻ ሰዓት",
+    "azan": "አዛን",
+    "jamaat": "ጀማዓት",
+    "sunrise": "ፀሐይ መውጣት",
+    "midDay": "መካከለኛው ቀን",
+    "sunset": "ፀሐይ መግባት",
+    "monthlyTimetable": "ወራዊ መርሐግብር",
+    "in": "በ",
+    "date": "ቀን",
+    "fajr": "ፋጅር",
+    "dhuhr": "ዱህር",
+    "asr": "አስር",
+    "maghrib": "ማግሪብ",
+    "isha": "ኢሻ"
   },
   "notFound": {
     "title": "404",
@@ -698,6 +977,38 @@
       "thu": "ሐሙስ",
       "fri": "ዓርብ",
       "sat": "ቅዳሜ"
+    },
+    "monthNames": {
+      "january": "ጃንዋሪ",
+      "february": "ፌብሩዋሪ",
+      "march": "ማርች",
+      "april": "ኤፕሪል",
+      "may": "ሜይ",
+      "june": "ጁን",
+      "july": "ጁላይ",
+      "august": "ኦገስት",
+      "september": "ሴፕቴምበር",
+      "october": "ኦክቶበር",
+      "november": "ኖቬምበር",
+      "december": "ዲሴምበር"
+    },
+    "dayNamesShort": {
+      "sun": "እሑድ",
+      "mon": "ሰኞ",
+      "tue": "ማክሰኞ",
+      "wed": "ረቡዕ",
+      "thu": "ሐሙስ",
+      "fri": "ዓርብ",
+      "sat": "ቅዳሜ"
+    },
+    "dayNamesFull": {
+      "sunday": "እሑድ",
+      "monday": "ሰኞ",
+      "tuesday": "ማክሰኞ",
+      "wednesday": "ረቡዕ",
+      "thursday": "ሐሙስ",
+      "friday": "ዓርብ",
+      "saturday": "ቅዳሜ"
     }
   },
   "qibla": {
@@ -715,7 +1026,13 @@
     "compassPermissionDenied": "የኮምፓስ ፍቃድ ተቀብሏል",
     "unableToAccessCompass": "ኮምፓስ ላይ መዳረስ አልተቻለም",
     "compassActive": "ኮምፓስ ንቁ",
-    "compassInactive": "ኮምፓስ አይሰራም"
+    "compassInactive": "ኮምፓስ አይሰራም",
+    "aboutQibla": "ስለ ቅብላ",
+    "aboutQiblaDescription": "ቅብላ ሙስሊሞች ስግደት (ሶላህ) ሲያደርጉ ወደሚመለከቱበት አቅጣጫ ነው። ወደ ካዕባ፣ በመካ ውስጥ በሚገኘው ታላቁ መስጊድ መሃል ላይ የሚገኘው ቅዱስ ሕንጻ ያመለክታል።",
+    "howToUse": "እንዴት እንደሚጠቀሙ",
+    "allowLocationAccess": "ለትክክለኛ አቅጣጫ የአካባቢ መዳረሻ ይፍቀዱ",
+    "useDeviceCompass": "ለቀጥታ አቅጣጫ የመሣሪያ ኮምፓስ ይጠቀሙ",
+    "faceDirection": "በኮምፓስ ላይ የሚታየውን አቅጣጫ ይመለከቱ"
   },
   "eventDetail": {
     "loadingEvent": "ዝግጅት በመጫን ላይ...",
@@ -929,7 +1246,44 @@
       "gradeSubmissions": "ስርጭቶችን ደረጃ ስጥ",
       "viewReports": "ሪፖርቶችን እይ",
       "announcements": "ማስታወቂያዎች",
-      "noAnnouncements": "ምንም ማስታወቂያዎች አይገኙም"
+      "noAnnouncements": "ምንም ማስታወቂያዎች አይገኙም",
+      "enrollmentsNeedReview": "ምዝገባዎች ማጣራት ያስፈልጋሉ",
+      "reviewEnrollments": "ምዝገባዎች ይገምግሙ",
+      "allEnrollmentsReviewed": "ሁሉም ምዝገባዎች ተገምግመዋል",
+      "viewStudents": "ተማሪዎች እይ",
+      "createCourse": "ኮርስ ፍጠር",
+      "editCourse": "ኮርስ አርም",
+      "courseTitle": "የኮርስ ርዕስ",
+      "description": "መግለጫ",
+      "serviceType": "የአገልግሎት አይነት",
+      "selectType": "አይነት ይምረጡ",
+      "level": "ደረጃ",
+      "selectLevel": "ደረጃ ይምረጡ",
+      "ageGroup": "የእድሜ ቡድን",
+      "selectAgeGroup": "የእድሜ ቡድን ይምረጡ",
+      "capacity": "መጠን",
+      "schedule": "መርሐግብር",
+      "duration": "ጊዜ",
+      "startDate": "የመጀመሪያ ቀን",
+      "endDate": "የመጨረሻ ቀን",
+      "fee": "ክፍያ",
+      "isFree": "ነጻ ኮርስ",
+      "freeCourse": "ይህ ነጻ ኮርስ ነው",
+      "courseCreated": "ኮርስ በተሳካ ሁኔታ ተፈጥሯል",
+      "courseUpdated": "ኮርስ በተሳካ ሁኔታ ተዘመነ",
+      "courseSaveFailed": "ኮርስ ማስቀመጥ አልተሳካም",
+      "allCourses": "ሁሉም ኮርሶች",
+      "courseBreakdown": "የኮርስ መበስበስ",
+      "enrollmentStatus": "የምዝገባ ሁኔታ",
+      "confirmed": "የተረጋገጠ",
+      "pending": "በመጠባበቅ ላይ",
+      "cancelled": "ተሰርዟል",
+      "full": "ሙሉ",
+      "linkToService": "ከአገልግሎት ጋር ያገናኙ (አማራጭ)",
+      "noServiceLink": "አገልግሎት አገናኝ የለም (ገለልተኛ ኮርስ)",
+      "serviceLinkHint": "ይህንን ኮርስ ከነባሪ አገልግሎት ጋር ማገናኘት ይችላሉ",
+      "enrollmentStatusUpdated": "የምዝገባ ሁኔታ በተሳካ ሁኔታ ተዘመነ",
+      "enrollmentUpdateFailed": "የምዝገባ ሁኔታ ማዘመን አልተሳካም"
     }
   },
   "admin": {
@@ -1016,6 +1370,7 @@
       "title": "የመገኘት አስተዳደር",
       "viewEditRecords": "የሰራተኞች መገኘት መዝገቦችን ይመልከቱ እና ያርሙ",
       "refresh": "አድስ",
+      "loading": "በመጫን ላይ...",
       "present": "ተገኝቷል",
       "absent": "አልተገኘም",
       "late": "ዘግይቷል",
