--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,7 +35,8 @@
     "calendar": "Calendar",
     "today": "Today",
     "share": "Share",
-    "schedule": "Schedule"
+    "schedule": "Schedule",
+    "refresh": "Refresh"
   },
   "nav": {
     "home": "Home",
@@ -132,6 +133,8 @@
     "upcomingEvents": "Upcoming Events",
     "pastEvents": "Past Events",
     "noEvents": "No events found",
+    "noEventsDescription": "Try adjusting your search or filter criteria to find events.",
+    "clearAllFilters": "Clear All Filters",
     "registerNow": "Register Now",
     "viewDetails": "View Details",
     "eventDate": "Event Date",
@@ -145,7 +148,33 @@
     "gridView": "Grid View",
     "listView": "List View",
     "calendarView": "Calendar View",
-    "viewCalendar": "View Calendar"
+    "viewCalendar": "View Calendar",
+    "retry": "Retry",
+    "haveEventIdea": "Have an event idea?",
+    "eventIdeaDescription": "We're always looking for new ways to serve our community. Share your event ideas with us!",
+    "suggestEvent": "Suggest an Event",
+    "featured": "Featured",
+    "eventFull": "Event Full",
+    "spotsLeft": "{{count}} spots left",
+    "noRegistrationRequired": "No registration required",
+    "rsvpNow": "RSVP Now",
+    "learnMore": "Learn More",
+    "dateTBD": "Date TBD",
+    "spotsRemaining": "{{count}} spots remaining",
+    "prev": "Prev",
+    "next": "Next",
+    "clickDayToView": "Click a day to view events",
+    "eventsOn": "Events on",
+    "more": "more",
+    "weekdays": {
+      "sun": "Sun",
+      "mon": "Mon",
+      "tue": "Tue",
+      "wed": "Wed",
+      "thu": "Thu",
+      "fri": "Fri",
+      "sat": "Sat"
+    }
   },
   "donations": {
     "title": "Donations",
@@ -172,7 +201,60 @@
     "viewAll": "View All",
     "totalRaised": "Total Raised",
     "donation": "donation",
-    "donations": "donations"
+    "donations": "donations",
+    "powerOfSadaqah": "The Power of Sadaqah",
+    "sadaqahDescription": "Charity (Sadaqah) is not just a donation; it is a proof of faith and a means to purify one's wealth and soul. Every contribution, no matter how small, makes a significant impact in the sight of Allah.",
+    "purifiesWealth": "Purifies wealth and increases provisions",
+    "extinguishesSins": "Extinguishes sins like water extinguishes fire",
+    "providesShade": "Provides shade on the Day of Judgment",
+    "supportsNeedy": "Supports the needy and strengthens community",
+    "quranicVerseTranslation": "\"The example of those who spend their wealth in the way of Allah is like a seed of grain which grows seven spikes; in each spike is a hundred grains.\"",
+    "quranicReference": "— Surah Al-Baqarah [2:261]",
+    "whyContribute": "Why Contribute?",
+    "whyContributeDesc": "We are committed to transparency, stewardship, and ensuring your donations have the maximum positive impact on our community.",
+    "hundredPercentSecure": "100% Secure",
+    "hundredPercentSecureDesc": "Your payments are processed securely with banking-grade encryption.",
+    "transparent": "Transparent",
+    "transparentDesc": "We provide regular reports on how funds are utilized for the community.",
+    "zakatEligible": "Zakat Eligible",
+    "zakatEligibleDesc": "Designed to handle Zakat, Sadaqah, and general donations correctly.",
+    "localImpact": "Local Impact",
+    "localImpactDesc": "Directly funds programs and maintenance for our local mosque.",
+    "howDonationsHelp": "How Your Donations Help",
+    "educationSupport": "Education",
+    "educationSupportDesc": "Supporting Islamic studies, Quran memorization programs, and educational resources for all ages.",
+    "communitySupport": "Community",
+    "communitySupportDesc": "Funding community gatherings, Iftar meals, and social welfare programs to strengthen our bonds.",
+    "maintenanceSupport": "Maintenance",
+    "maintenanceSupportDesc": "Ensuring our sacred space remains clean, safe, and well-maintained for daily prayers and worship.",
+    "chooseYourCause": "Choose Your Cause",
+    "noActiveCauses": "No Active Causes",
+    "noActiveCausesDesc": "There are currently no specific donation causes available.",
+    "generalDonationAvailable": "You may still make a general donation below.",
+    "goToDonationForm": "Go to Donation Form",
+    "makeDonation": "Make a Donation",
+    "supportCommunitySubtitle": "Support our community with your generous contribution",
+    "enterCustomAmount": "Enter custom amount",
+    "donationSummary": "Donation Summary",
+    "cause": "Cause",
+    "generalFund": "General Fund",
+    "whatYouSupporting": "What you're supporting:",
+    "communityPrograms": "Community programs",
+    "educationalServices": "Educational services",
+    "facilityMaintenance": "Facility maintenance",
+    "worshipActivities": "Worship activities",
+    "taxReceipt": "Tax Receipt",
+    "taxReceiptDesc": "Tax receipts will be provided for all donations via email.",
+    "securePaymentChapa": "Secure payment powered by Chapa",
+    "loadingCauses": "Loading causes...",
+    "raised": "raised",
+    "goal": "Goal",
+    "redirectingToPayment": "Redirecting to payment gateway...",
+    "donationRecordedPaymentFailed": "Donation recorded but payment initialization failed. Please contact support.",
+    "thankYouDonation": "Thank you for your {{amount}} ETB donation!",
+    "paymentFailed": "Payment failed. Please try again.",
+    "validationError": "Validation Error",
+    "failedToLoadCauses": "Failed to load donation causes"
   },
   "education": {
     "title": "Education",
@@ -202,6 +284,10 @@
     "enrolled": "Enrolled",
     "enrollmentCancelled": "Enrollment cancelled",
     "pleaseLogin": "Please login to enroll in services",
+    "sharedSuccessfully": "Shared successfully",
+    "failedToShare": "Failed to share",
+    "shareService": "Share service",
+    "linkCopied": "Link copied to clipboard",
     "dailyQirat": "Daily Qirat Program",
     "communityQuran": "Community Quran Reading",
     "fridayKhutba": "Friday Khutba",
@@ -209,7 +295,7 @@
     "quranMemorizationHifz": "Quran Memorization (Hifz)",
     "tajweed": "Tajweed",
     "fiqh": "Fiqh (Islamic Jurisprudence)",
-    "hadithStudies": "Hadith Studies",
+    "hadithStudies": "Hadith Studies (Prophetic Traditions)",
     "tafseer": "Tafseer (Quran Interpretation)",
     "featureCards": {
       "expertInstructors": {
@@ -319,7 +405,53 @@
     "emergencyContact": "Emergency Contact Name",
     "emergencyPhone": "Emergency Contact Phone",
     "specialRequirements": "Special Requirements",
-    "notes": "Notes"
+    "notes": "Notes",
+    "whenToPerform": "When to Perform Iʿtikāf",
+    "timingAndDuration": "Timing and Duration",
+    "ramadanSunnah": "Ramadan (Sunnah)",
+    "ramadanSunnahDesc": "The last 10 days of Ramadan is the most emphasized Sunnah, seeking the Night of Power.",
+    "voluntaryNatafil": "Voluntary (Natafil)",
+    "voluntaryNatafilDesc": "Can be performed at any time of the year for any duration, even a few hours.",
+    "duration": "Duration",
+    "durationDesc": "Standard Sunnah is 10 days, but minimum duration can be as short as a moment of intention.",
+    "whyWithUs": "Why Iʿtikāf With Us?",
+    "whyWithUsDesc": "We provide a structured environment that takes care of your physical needs so you can focus entirely on your spiritual needs.",
+    "scholarlyGuidance": "Scholarly Guidance",
+    "scholarlyGuidanceDesc": "Access to mentors for questions and spiritual counseling.",
+    "structuredProgram": "Structured Program",
+    "structuredProgramDesc": "Daily Halaqas, Quran circles, and Qiyam prayers.",
+    "mealsProvided": "Meals Provided",
+    "mealsProvidedDesc": "Suhoor and Iftar meals served daily.",
+    "comfortSafety": "Comfort & Safety",
+    "comfortSafetyDesc": "Secure sleeping areas and clean facilities.",
+    "quranicVerseTranslation": "\"And do not have relations with them as long as you are staying for worship in the mosques.\"",
+    "quranicReference": "— Surah Al-Baqarah [2:187]",
+    "viewDetails": "View Details",
+    "alreadyRegisteredToast": "Already registered",
+    "details": "Details",
+    "capacity": "Capacity",
+    "people": "People",
+    "requirements": "Requirements",
+    "whatToBring": "What to Bring",
+    "day": "Day",
+    "pleaseCheckBack": "Please check back later for updates.",
+    "programTitleFallback": "Iʿtikāf Program",
+    "mainPrayerHall": "Main Prayer Hall",
+    "full": "FULL",
+    "joinUsRetreat": "Join us for this spiritual retreat...",
+    "phonePlaceholder": "+251...",
+    "fajrActivity": "Fajr:",
+    "dhuhrActivity": "Dhuhr:",
+    "asrActivity": "Asr:",
+    "maghribActivity": "Maghrib:",
+    "ishaActivity": "Isha:",
+    "dateTBD": "Date TBD",
+    "invalidDate": "Invalid Date",
+    "failedToLoadPrograms": "Failed to load Iʿtikāf programs",
+    "failedToLoadDetails": "Failed to load program details",
+    "failedToRegister": "Failed to register",
+    "successfullyRegistered": "Successfully registered for Iʿtikāf program!",
+    "close": "Close"
   },
   "auth": {
     "login": "Login",
@@ -328,7 +460,6 @@
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Confirm Password",
-    "forgotPassword": "Forgot Password?",
     "rememberMe": "Remember Me",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
@@ -384,7 +515,8 @@
       "bookFacilities": "Book facilities and events easily",
       "connectCommunity": "Connect with the community"
     },
-    "forgotPassword": {
+    "forgotPassword": "Forgot Password?",
+    "forgotPasswordPage": {
       "title": "Forgot Password?",
       "enterEmail": "Enter your email to receive a password reset link",
       "checkEmail": "Check your email for reset instructions",
@@ -483,7 +615,24 @@
     "mosque": "Mosque",
     "searchGallery": "Search gallery...",
     "noMediaFound": "No media found",
-    "filter": "Filter"
+    "filter": "Filter",
+    "mediaGallery": "Media Gallery",
+    "exploreDescription": "Explore photos and videos from our events, prayers, and community activities.",
+    "eventImagesWillAppear": "Event images will appear here once they are uploaded.",
+    "tryAdjustingSearch": "Try adjusting your search or filter criteria",
+    "mosqueCollegePhotos": "Mosque & College Photos",
+    "curatedCollection": "A curated collection from our facilities and campus.",
+    "shareYourMoments": "Share Your Moments",
+    "shareDescription": "Have photos or videos from our events? Share them with us to be featured in our gallery!",
+    "submitMedia": "Submit Media",
+    "retry": "Retry",
+    "photo": "Photo",
+    "video": "Video",
+    "untitled": "Untitled",
+    "mainHall": "Main Hall",
+    "communityLogo": "Community Logo",
+    "unableToLoadGallery": "Unable to load gallery images. Please try again later.",
+    "close": "Close"
   },
   "news": {
     "title": "News",
@@ -498,7 +647,14 @@
     "trending": "Trending",
     "noNewsFound": "No news found",
     "clearFilters": "Clear Filters",
-    "sortBy": "Sort By"
+    "sortBy": "Sort By",
+    "showingAnnouncements": "Showing {{count}} of {{total}} announcements",
+    "activeFilters": "Active filters:",
+    "search": "Search",
+    "loadingNews": "Loading news...",
+    "supportFundraising": "Support Fundraising",
+    "today": "Today",
+    "admin": "Admin"
   },
   "home": {
     "quickActions": "Quick Actions",
@@ -755,7 +911,23 @@
     "locationInformation": "Location Information",
     "downloadMonthlySchedule": "Download Monthly Schedule",
     "sharePrayerTimes": "Share Prayer Times",
-    "refreshLocation": "Refresh Location"
+    "refreshLocation": "Refresh Location",
+    "nowTimeIs": "Now Time",
+    "nextPrayerIs": "Next Prayer",
+    "endTime": "End Time",
+    "azan": "Azan",
+    "jamaat": "Jamaat",
+    "sunrise": "Sunrise",
+    "midDay": "Mid Day",
+    "sunset": "Sunset",
+    "monthlyTimetable": "Monthly Timetable",
+    "in": "in",
+    "date": "Date",
+    "fajr": "Fajr",
+    "dhuhr": "Dhuhr",
+    "asr": "Asr",
+    "maghrib": "Maghrib",
+    "isha": "Isha"
   },
   "notFound": {
     "title": "404",
@@ -1052,7 +1224,44 @@
       "gradeSubmissions": "Grade Submissions",
       "viewReports": "View Reports",
       "announcements": "Announcements",
-      "noAnnouncements": "No announcements available"
+      "noAnnouncements": "No announcements available",
+      "enrollmentsNeedReview": "Enrollments need your review",
+      "reviewEnrollments": "Review Enrollments",
+      "allEnrollmentsReviewed": "All enrollments have been reviewed",
+      "viewStudents": "View Students",
+      "createCourse": "Create Course",
+      "editCourse": "Edit Course",
+      "courseTitle": "Course Title",
+      "description": "Description",
+      "serviceType": "Service Type",
+      "selectType": "Select Type",
+      "level": "Level",
+      "selectLevel": "Select Level",
+      "ageGroup": "Age Group",
+      "selectAgeGroup": "Select Age Group",
+      "capacity": "Capacity",
+      "schedule": "Schedule",
+      "duration": "Duration",
+      "startDate": "Start Date",
+      "endDate": "End Date",
+      "fee": "Fee",
+      "isFree": "Free Course",
+      "freeCourse": "This is a free course",
+      "courseCreated": "Course created successfully",
+      "courseUpdated": "Course updated successfully",
+      "courseSaveFailed": "Failed to save course",
+      "allCourses": "All Courses",
+      "courseBreakdown": "Course Breakdown",
+      "enrollmentStatus": "Enrollment Status",
+      "confirmed": "Confirmed",
+      "pending": "Pending",
+      "cancelled": "Cancelled",
+      "full": "Full",
+      "linkToService": "Link to Service (Optional)",
+      "noServiceLink": "No service link (standalone course)",
+      "serviceLinkHint": "Optionally link this course to an existing service",
+      "enrollmentStatusUpdated": "Enrollment status updated successfully",
+      "enrollmentUpdateFailed": "Failed to update enrollment status"
     }
   },
   "admin": {
